added getRatings
