# src/routes.ts
@@ -8,12 +8,13 @@ import * as Koa from 'koa';                 // Required for definitions
 import * as Router from 'koa-router';
 
 // Import modules here
-import {addRating, getRating} from './modules/rating';
+import {addRating, getRating, getRatings} from './modules/rating';
 
 // Initialize router
 const router = new Router();
 
 // Declare routes below
+router.get('/ratings', getRatings);
 router.post('/rating/:flightId', addRating);
 router.get('/rating/:flightId', getRating);
 
