# swagger.yaml
@@ -21,6 +21,20 @@ consumes:
 produces:
 - application/json
 paths:
+  /ratings:
+    get:
+      tags:
+      - "rating"
+      summary: "Returns ratings for all known flights"
+      description: "Returns ratings for all known flights"
+      operationId: "getRatings"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Rating"
   /rating/{flightId}:
     get:
       tags:
